# sepal_ui

./: .codeclimate.yml  .coveragerc  .cz.toml  .cz.yaml  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-config.yaml.swp  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTE.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  README.rst  crowdin.yml  cz.toml  ee_private_key.json  l10n.toml  logging_config.example.toml  noxfile.py  pyproject.toml  readthedocs.yml  requirements.txt  rgb1.tif:Zone.Identifier  run_solara.sh  setup.py  test.html
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: act_unit.yml  ee.yml  kaban.yml  release.yml  test.yml  unit.yml
as_dem_30s/as_dem_30s/: dblbnd.adf  hdr.adf  metadata.htm  metadata.xml  sta.adf  vat.adf  w001001x.adf
as_dem_30s/info/: arc.dir  arc0000.nit  arc0002r.001
doc/: about.md  aoi.md  app.md  components.md  process.md
docs/: requirements.txt
docs/plans/: 2026-03-02-phase2-rename-design.md  2026-03-02-phase2-rename-plan.md  2026-03-04-phase3-external-rename-design.md  2026-03-04-phase3-external-rename-plan.md
docs/source/: 404.rst  authors.rst  browserconfig.xml  changelog.rst  conf.py  index.rst  installation.rst  readme.rst
examples/: Alert.ipynb  DatePicker.ipynb  FileInput.ipynb  FileInputBinding.ipynb  Mapping.ipynb
notebooks/: 01_sepal_client.ipynb  02_gee_interface.ipynb  03_drive_interface.ipynb  long_calculation  simple
pysepal/: __init__.py  conf.py
pysepal/aoi/: __init__.py  aoi_model.py  aoi_tile.py  aoi_view.py
pysepal/frontend/: styles.py
pysepal/mapping/: __init__.py  aoi_control.py  basemaps.py  bounds.py  draw_control.py  fullscreen_control.py  geojson_utils.py  inspector_control.py  layer.py  layer_state_control.py  layers_control.py  legend_control.py  map_btn.py  menu_control.py  sepal_map.py  visualization.py  zoom_control.py
pysepal/message/: __init__.py
pysepal/model/: __init__.py
pysepal/planetapi/: __init__.py  planet_model.py  planet_view.py  planet_widgets.py
pysepal/scripts/: __init__.py  decorator.py  gee.py  gee_interface.py  sepal_client.py  thread_controller.py  utils.py
pysepal/sepalwidgets/: __init__.py  alert.py  app.py  btn.py  file_input.py  inputs.py  radio.py  sepal_ipyvuetify.py  sepalwidget.py  tile.py  vue_app.py  widget.py
pysepal/solara/: decorators.py  session_manager.py  utils.py
pysepal/translator/: translator.py
sepal_ui/: Untitled1.ipynb  __init__.py  aoi.py  conf.py  gdal.py  mapping.py  oft.py  sepalwidgets.py  sepalwidgets2.py  translator.py  widgetBinding.py  widgetFactory.py
sepal_ui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sepal_ui/aoi/: Untitled.ipynb  __init__.py  aoi_io.py  aoi_model.py  aoi_tile.py  aoi_view.py  local_aoi.ipynb  local_aoi.py  local_aoi_ui.ipynb  tile_aoi.py
sepal_ui/data/: gadm_database.parquet  gaul_database.parquet  gaul_iso.json  gaul_iso.parquet  locale.parquet
sepal_ui/frontend/: __init__.py  js.py  resize_trigger.py  styles.py
sepal_ui/logger/: __init__.py  logger.py
sepal_ui/mapping/: __init__.py  aoi_control.py  basemaps.py  bounds.py  draw_control.py  fullscreen_control.py  gee_interface.py  geojson_utils.py  inspector_control.py  layer.py  layer_state_control.py  layers_control.py  legend.py  legend_control.py  map_btn.py  mapping.py  marker_cluster.py  menu_control.py  sepal_map.py  state_bar.py  statebar_control.py  v_inspector.py  value_inspector.py  visualization.py  zoom_control.py
sepal_ui/message/: __init__.py  en.json  es.json  fr.json  test_random.ipynb
sepal_ui/model/: __init__.py  model.py
sepal_ui/planet/: __init__.py  planet.py
sepal_ui/planetapi/: __init__.py  geometry.json  planet_model.py  planet_view.py  planet_widgets.py  tests.ipynb
sepal_ui/reclassify/: Untitled.ipynb  __init__.py  customize_table.py  parameters.py  reclassify_model.py  reclassify_tile.py  reclassify_view.py  reclassify_widgets.py  table_view.py  ui.ipynb
sepal_ui/scripts/: FIPS_code_to_country.csv  Untitled.ipynb  __init__.py  country_code.csv  decorator.py  default_about.md  default_readme.md  disclaimer.md  drive_interface.py  encrypted_key.json  fAO_GAUL_LEVEL_2.csv  gaul_database.csv  gdrive.py  gee.py  gee_interface.py  gee_task.py  locale.csv  mapping.py  messages.py  run_aoi_selection.py  sepal_client.py  sepal_module_skeleton.py  thread_controller.py  utils.py  warning.py
sepal_ui/sepalwidgets/: __init__.py  alert.py  app.py  btn.py  file_input.py  inputs.py  load_table_field.py  radio.py  sepal_ipyvuetify.py  sepalwidget.py  tile.py  vue_app.py  vue_widgets.py  widget.py
sepal_ui/solara/: __init__.py  asset_merger.py  decorators.py  session_manager.py  setup.py  utils.py
sepal_ui/styles/: styles.py
sepal_ui/templates/: ee_interface.ipynb
sepal_ui/tests/: NavDrawer.py  test_Alert.py  test_App.py  test_AppBar.py  test_DownloadBtn.py  test_DrawerItem.py  test_Footer.py  test_Markdown.py  test_NavDrawer.py  test_SepalWidget.py  test_Tile.py
sepal_ui/translator/: __init__.py  translator.py
tests/: Untitled.ipynb  __init__.py  check_warnings.py  conftest.py  ee_token.py  test_Alert.py  test_AoiControl.py  test_AoiModel.py  test_AoiTile.py  test_AoiView.py  test_Aoi_io.py  test_App.py  test_AppBar.py  test_AssetSelect.py  test_Banner.py  test_Btn.py  test_Clip.py  test_CopyToClip.py  test_DatePicker.py  test_DownloadBtn.py  test_DrawControl.py  test_DrawerItem.py  test_EELayer.py  test_FileInput.py  test_Footer.py  test_Frontend.py  test_FullScreenControl.py  test_InspectorControl.py  test_LayerStateControl.py  test_LayersControl.py  test_Legend.py  test_LegendControl.py  test_LoadTableField.py  test_LocaleSelect.py  test_MapBtn.py  test_Markdown.py  test_MenuControl.py  test_Model.py  test_NavDrawer.py  test_NumberField.py  (+31 more)
tests/data/: warning_list.txt
tests/samples/: clc3class.tif  example.tif
tests/test_aoi/: test_AoiModel.py  test_AoiTile.py  test_AoiView.py
tests/test_frontend/: test_Frontend.py  test_style.py
(+620 files in other folders)
